[package]
name = "rust-udcn-common"
version = "0.1.0"
edition = "2021"
description = "Common types and utilities for µDCN"

[dependencies]
#bytes = "1.10.1"
bytes = { version = "1.10.1", features = ["serde"] } 
serde = { version = "1.0", features = ["derive"] }
aya-log = "0.2.1"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
aya = "0.13.1"
