[package]
name = "rust-udcn-ebpf"
version = "0.1.0"
edition = "2021"
description = "eBPF kernel components for µDCN"

[dependencies]
aya-ebpf = "0.1.1"
aya-log-ebpf = "0.1.1"
rust-udcn-common = { path = "../rust-udcn-common" }
memoffset = "0.9"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
