[package]
name = "rust-udcn-quic"
version = "0.1.0"
edition = "2021"
description = "QUIC transport for µDCN"

[dependencies]
rust-udcn-common = { path = "../rust-udcn-common" }
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
tokio = { version = "1.32", features = ["full"] }
bytes = "1.4"
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rcgen = "0.11" # For certificate generation
tracing = "0.1"
