[package]
name        = "rust-udcn-quic"
version     = "0.1.0"
edition     = "2021"
description = "QUIC transport for µDCN"

[dependencies]
# internal
rust-udcn-common = { path = "../rust-udcn-common" }

# -------- QUIC stack (API used by the code) ------------------------
# quinn 0.10   ⇐⇒   rustls 0.20   ⇐⇒   webpki-roots 0.22
quinn           = { version = "=0.10", default-features = false, features = ["rustls"] }
rustls          = { version = "=0.20", features = ["dangerous_configuration", "quic"] }
webpki-roots    = "0.22"
rustls-pemfile  = "1"        # you call certs()/pkcs8_private_keys() directly

# -------- async / util ---------------------------------------------
tokio   = { version = "1.32", features = ["full"] }
futures = "0.3"
bytes   = { version = "1.10.1", features = ["serde"] }

anyhow       = "1.0"
async-trait  = "0.1"
bincode      = "1.3"
log          = "0.4"
thiserror    = "1.0"
serde        = { version = "1.0", features = ["derive"] }
rcgen        = { version = "0.11", default-features = false, features = ["ring"] }
tracing      = "0.1"
