[package]
name = "rust-udcn-xdp"
version = "0.1.0"
edition = "2021"
description = "XDP userspace components for µDCN"

[dependencies]
aya = { version = "0.13.1", features = ["async_tokio"] }
aya-log = "0.2.1"
rust-udcn-common = { path = "../rust-udcn-common" }
rust-udcn-ebpf = { path = "../rust-udcn-ebpf" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
log = "0.4"
env_logger = "0.10"
libc = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.4"
